--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,9 @@ coverage==4.3.4
 docopt==0.6.1
 nose==1.3.7
 packaging==16.8
+py==1.4.32
+pyfiglet==0.7.5
 pyparsing==2.1.10
+pytest==3.0.6
 six==1.10.0
+termcolor==1.1.0
