--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ coverage==4.3.4
 docopt==0.6.1
 nose==1.3.7
 packaging==16.8
+pep8==1.7.0
 py==1.4.32
 pyfiglet==0.7.5
 pyparsing==2.1.10
 pytest==3.0.6
 six==1.10.0
+tabulate==0.7.7
 termcolor==1.1.0
