--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: nosetests --with-coverage --cover-package=app/
+
+sudo: false
+script: 
+  - nosetests --with-coverage --cover-package=app/
