--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,10 @@ python:
   - "3.6"
 # command to install dependencies
 install: "pip install -r requirements.txt"
+
+# sudo mode normal
+sudo: false
+
 # command to run tests
-script: nosetests
+script: 
+  - nosetests --with-coverage --cover-package=app/
