[ft-tests] Update to clean test data

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ sudo: false
 
 # command to run tests
 script: 
-  - nosetests --with-coverage --cover-package=app/
+  - nosetests --with-coverage --cover-erase
