--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -14,12 +14,10 @@ engines:
     enabled: true
 ratings:
   paths:
-  - "**.inc"
-  - "**.js"
-  - "**.jsx"
-  - "**.module"
-  - "**.php"
   - "**.py"
-  - "**.rb"
 exclude_paths:
 - tests/
+- docs/
+- data/
+- databases/
+- designs/
